--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Word Processor</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- jquery cdn -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="/script.js"></script>
-    <link href="/style.css" rel="stylesheet" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <link href="style.css" rel="stylesheet">
+    <title>Word Processor</title>
 </head>
+<script src="script.js"></script>
 
 <body>
     <div class="main-container">
